--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/src/index.css">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -30,8 +31,8 @@
   </head>
   <body>
      <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand text-white">
+        <nav class="navbar navbar-expand-lg navbar-white bg-white">
+          <a class="navbar-brand text-black">
             Coder-app
           </a>
           <button class="navbar-toggler" data- target="menu" data-toggle="collapse">
@@ -50,11 +51,23 @@
               </li>
             </ul>
           </div>
-
+              <button class="nav-link">Carrito</button>
         </nav>
 
 
      </div>
+     <section id="sect">
+      <div class="midl">
+          <div>
+              <h1>Contador de click sobre un boton</h1>
+          </div>
+          <button id="btnClick">Cuenta</button>
+          <button id="btnClear">Reset</button>
+          <p id="contarClick"></p>
+      </div>
+  </section>
+     
+     
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -71,3 +84,4 @@
 </html>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<script src="/src/App.js"></script>
