--- a/public/index.html
+++ b/public/index.html
@@ -56,16 +56,50 @@
 
 
      </div>
-     <section id="sect">
-      <div class="midl">
-          <div>
-              <h1></h1>
-          </div>
-          <button id="btnClick">Cuenta</button>
-          <button id="btnClear">Reset</button>
-          <p id="contarClick"></p>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+
+
+<div class="container">
+  <div class="row">
+
+    <div class="row col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+      <div class="card col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="max-width:319px;">
+        <img src="https://placehold.it/318x180/" class="card-img-top" alt="Card image" />
+
+        <div class="card-block">
+          <h4 class="card-title">Producto</h4>
+          <p class="card-text">Zapatilla</p>
+          <a href="http://sonarsystems.co.uk" class="btn btn-success">Ver detalle del Producto</a>
+        </div>
       </div>
-  </section>
+
+      <div class="card col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4" style="max-width:319px;">
+        <img src="https://placehold.it/318x180/" class="card-img-top" alt="Card image" />
+
+        <div class="card-block">
+          <h4 class="card-title">Producto</h4>
+          <p class="card-text">Zapatilla</p>
+          <a href="http://sonarsystems.co.uk" class="btn btn-success">Ver detalle del Producto</a>
+        </div>
+      </div>
+
+      <div class="card col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 .img-fluid" style="max-width:319px;">
+        <img src="https://placehold.it/318x180/" class="card-img-top" alt="Card image" />
+
+        <div class="card-block">
+          <h4 class="card-title">Producto</h4>
+          <p class="card-text">Zapatilla</p>
+          <a href="http://sonarsystems.co.uk" class="btn btn-success">Ver detalle del Producto</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
      
      
     <noscript>You need to enable JavaScript to run this app.</noscript>
